# fixbrot

./: .gitignore  LICENSE  README.md
app/m5/: flatten_headers.py
app/m5/Fixbrot/: Fixbrot.h  Fixbrot.ino
app/picopad/: Makefile  build.sh  flash.sh
app/picopad/DEMO/FIXBROT/: Makefile  d.bat  e.bat
app/picopad/DEMO/FIXBROT/src/: main.cpp
app/picopad/PROG/FIXBROT/: c.bat  c.sh  config.h
app/picopad/PROG/FIXBROT/src/: main.cpp
app/picosystem/: CMakeLists.txt  Makefile
app/picosystem/src/: fixbrot.cpp
lib/: CMakeLists.txt
lib/include/fixbrot/: ShapoSansP_s12c09a01w02.h  array_queue.hpp  common.hpp  engine.hpp  fixbrot.hpp  fixed32.hpp  fixed64.hpp  fixed_common.hpp  gui.hpp  mandelbrot.hpp  menu.hpp  packed_bitmap.hpp  palette.hpp  renderer.hpp  worker.hpp
